Fixed up some layout issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -230,3 +230,9 @@ body {
   color: $greenMediumLight;
   text-align: left;
 }
+
+/* sign-up form */
+
+.signup {
+  color: white;
+}
